<resources>
    <string name="app_name">TongHop</string>
    <string name="todo1">TODO</string>
    <string name="btnProfile">Profile</string>
    <string name="logout">Đăng xuất</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_a_accout">Already Have a Accout?</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="or">OR</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
</resources>